--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -1,5 +1,6 @@
 $SB_verdeacqua_1: #058283;
 $SB_verdeacqua_2: #00A6A6;
+$SB_verdeacqua_2_tras: #00a6a620;
 $SB_grigioscuro: #606D75;
 $SB_grigio: #E2E3E7;
 $SB_grigiochiaro: #EBECEF;
